# SFMLGameDev

./: .gitignore
src/: Aircraft.cpp  Aircraft.h  Application.cpp  Application.h  CMakeLists.txt  Category.h  Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h  Entity.cpp  Entity.h  GameState.cpp  GameState.h  LoadingState.h  MenuState.cpp  MenuState.h  Player.cpp  Player.h  ResourceHolder.h  ResourceHolder.inl  ResourceIdentifiers.h  SceneNode.cpp  SceneNode.h  SpriteNode.cpp  SpriteNode.h  State.cpp  State.h  StateIdentifiers.h  StateStack.cpp  StateStack.h  Utility.cpp  Utility.h  World.cpp  World.h  main.cpp
